syntax = "proto3";

package account;

service AccountService {
  rpc GetAccountByIdGrpc (AccountByIdRequest) returns (AccountResponse);
  rpc UpdateAccountBalanceGrpc (UpdateBalanceRequest) returns (UpdateBalanceResponse);
}

message AccountByIdRequest {
  int32 id = 1;
}

message AccountResponse {
   int32 id = 1;
  string accountNumber = 2;
  string userId = 3;
  double balance = 4;
  string status = 5;
}

message UpdateBalanceRequest {
  int32 id = 1;
  double amount = 2;
  string type = 3; // "credit" or "debit"
}

message UpdateBalanceResponse {
  bool success = 1;
}
