syntax = "proto3";

package transaction;

service TransactionService {
  rpc CreateTransaction(TransactionRequest) returns (TransactionResponse);
}

message TransactionRequest {
  int32 userId = 1;
  int32 accountId = 2;
  double amount = 3;
  string type = 4; // "credit" or "debit"
  string token = 5; // JWT for authentication
}

message TransactionResponse {
  string message = 1;
}
